@@ -54,14 +54,6 @@ pipeline.
 .LP
 .SH NOTES
 .PP
-If you need to count from a negative number
-to a positive one, you will need to do this
-maneuver below, at least for now:
-.IP \& 2
-.BI "example% seq -s' ' -- -5 10" 
-.LP
-.br
-.PP
 It does not implement the \-f option found
 in Plan 9 from Bell Labs' implementation,
 although \-p can replace \-f in many cases.
